<resources>
    <string name="label">PreSchooling For Kids</string>
    <string name="let_us_learn">Lets Start LEARNING!</string>
    <string name="learning_section">Learning Section</string>
    <string name="game_section">Game Section</string>
    <string name="video_learning_section">Video Learning Section</string>
    <string name="quiz_section">Quiz Section</string>
    <string name="preschooling_for_kids">PreSchooling For Kids</string>
    <string name="successful_intent">SuccessFUl INTENT!</string>
    <string name="select">Select</string>
    <string name="imageview">Imageview</string>
    <string name="alphabet_card">Alphabet Card</string>
    <string name="number_card">Number Card</string>
    <string name="animals_card">Animals Card</string>
    <string name="color_card">Colors Card</string>
    <string name="month_card">Month Card</string>
    <string name="day_card">Day Card</string>
    <string name="body_parts_card">Body Parts Card</string>
    <string name="shape_card">Shape Card</string>
    <string name="Count_Section">Counting</string>
    <string name="splash_title">Welcome KIds!</string>
    <string name="english_title">English Alphabets</string>
    <string name="animal_title">Animals Name</string>
    <string name="landing_title">Learning</string>
    <string name="fruit_title">Fruit Names</string>
    <string name="month_title">Month Names</string>
    <string name="day_title">Day Names</string>
    <string name="bodypart_title">Body Part Names</string>
    <string name="shapes_title">Shape Names</string>
    <string name="Urdu_Card">Urdu Card</string>
    <string name="prayer_section">Prayer Section</string>
    <string name="prayer_title">Prayers</string>
    <string name="urdu_title">Urdu Alphabets</string>
    <string name="previous_button">Previous Button</string>
    <string name="play_button">Play Button</string>
    <string name="next_button">Next Button</string>
    <string name="recyclerview_image">Recyclerview Image</string>
    <string name="number_of_questions">Number of Questions</string>
    <string name="question">Question</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="restart_quiz">Restart Quiz</string>
    <string name="your_score_is">Your score is</string>
    <string name="drawing_section">Drawing Section</string>
    <string name="eraser_button">Eraser Button!</string>
    <string name="color_button">Color Button!</string>
    <string name="sava_button">Sava Button!</string>

    <!--    Tic Tac Toe Strings-->
    <string name="PlayerSetupTitle">Enter your Name</string>
    <string name="Label1">Player 1</string>
    <string name="Label2">Player 2</string>
    <string name="submitButton">Start Game</string>
    <string name="NameHint">Enter your Name</string>
    <string name="play_again">Play Again</string>
    <string name="home">Home</string>
    <string name="initial_Value">A a</string>

    <string-array name="words">
        <item>A for Apple</item>
        <item>B for Banana</item>
        <item>C for Cat</item>
        <item>D for Dog</item>
        <item>E for Elephant</item>
        <item>F for Fish</item>
        <item>G for Gate</item>
        <item>H for House</item>
        <item>I for InkPot</item>
        <item>J for Jacket</item>
        <item>K for Kite</item>
        <item>L for Lemon</item>
        <item>M for Monkey</item>
        <item>N for Nose</item>
        <item>O for Orange</item>
        <item>P for Parrot</item>
        <item>Q for Queen</item>
        <item>R for Rabbit</item>
        <item>S for Sun</item>
        <item>T for Train</item>
        <item>U for Umbrella</item>
        <item>V for Violin</item>
        <item>W for Watch</item>
        <item>X for Xylophone</item>
        <item>Y for Yak</item>
        <item>Z for Zebra</item>
    </string-array>

    <string-array name="count">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
        <item>Eight</item>
        <item>Nine</item>
        <item>Ten</item>
        <item>Eleven</item>
        <item>Twelve</item>
        <item>Thirteen</item>
        <item>Fourteen</item>
        <item>Fifteen</item>
        <item>Sixteen</item>
        <item>Seventeen</item>
        <item>Eighteen</item>
        <item>Nineteen</item>
        <item>Twenty</item>
    </string-array>

    <string-array name="colors">
        <item>Green</item>
        <item>Pink</item>
        <item>Red</item>
        <item>Black</item>
        <item>Aqua</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Slate</item>
        <item>Violet</item>
        <item>White</item>
        <item>Yellow</item>
    </string-array>

</resources>