<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizAlphabetsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_of_questions"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:id="@+id/TVQUESTIONATTEMPTED" />

    <ImageView
        android:id="@+id/TVQUESTION"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/TVQUESTIONATTEMPTED"
        android:layout_marginTop="30dp"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TVQUESTION"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="4dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/option_1"
            android:textAllCaps="false"
            android:id="@+id/BtnOption1"
            android:background="@color/yellow_700"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="4dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/option_2"
            android:textAllCaps="false"
            android:id="@+id/BtnOption2"
            android:background="@color/yellow_700"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="4dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/option_3"
            android:textAllCaps="false"
            android:id="@+id/BtnOption3"
            android:background="@color/yellow_700"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="4dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/option_4"
            android:textAllCaps="false"
            android:id="@+id/BtnOption4"
            android:background="@color/yellow_700"/>

    </LinearLayout>

</RelativeLayout>