<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LandingActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/learningView"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:contentDescription="@string/learning_section"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:srcCompat="@drawable/learning" />

            <ImageView
                android:id="@+id/drawingView"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:contentDescription="@string/drawing_section"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:srcCompat="@drawable/drawing" />

            <ImageView
                android:id="@+id/videolearningView"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:contentDescription="@string/video_learning_section"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:srcCompat="@drawable/video_learning" />

            <ImageView
                android:id="@+id/gameView"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:srcCompat="@drawable/game"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:contentDescription="@string/game_section" />

            <ImageView
                android:id="@+id/quizView"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:contentDescription="@string/quiz_section"
                app:srcCompat="@drawable/quiz"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>